--- a/style.css
+++ b/style.css
@@ -262,3 +262,21 @@ footer {
 #tabs-accordion .ui-tabs-nav li.ui-sortable-helper {
     cursor: grabbing;
 }
+/* Dodajemy stylizację dla błędnie wprowadzonych danych */
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-5px); }
+    50% { transform: translateX(5px); }
+    75% { transform: translateX(-5px); }
+    100% { transform: translateX(0); }
+  }
+  
+  .input-error {
+    border: 2px solid red;
+    animation: shake 0.3s;
+  }
+  
+  .input-success {
+    border: 2px solid green;
+    transition: border-color 0.7s;
+  }
